--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "dark_theme": true,
+    "dark_theme": false,
     "normalize_volume": true,
     "dark_mode": false,
     "auto_normalize": false
